Fixed migration of old .h2 stores.
Dates from v1.3.x and earlier, fairly uncommon but used by early Demyo versions.

Refs The4thLaw/demyo#90.